--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name": "oyejorge/less.php",
+	"name": "less.php/less.php",
 	"description": "PHP port of the Javascript version of LESS http://lesscss.org",
 	"keywords": [ "less", "css", "php", "stylesheet", "less.js", "lesscss" ],
-	"homepage": "http://lessphp.gpeasy.com",
+	"homepage": "https://github.com/Less-PHP/less.php",
 	"license": "Apache-2.0",
 	"authors": [
 		{
@@ -16,8 +16,16 @@
 		{
 			"name": "Martin Jantošovič",
 			"homepage": "https://github.com/Mordred"
+		},
+		{
+			"name": "Less-PHP",
+			"homepage": "https://github.com/Less-PHP/less.php"
 		}
 	],
+	"support"    : {
+		"source": "https://github.com/Less-PHP/less.php.git",
+		"issues": "https://github.com/Less-PHP/less.php/issues",
+	},
 	"require": {
 		"PHP" : ">=5.2"
 	},
