--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"keywords": [ "less", "css", "php", "stylesheet", "less.js", "lesscss" ],
 	"homepage": "http://lessphp.gpeasy.com",
 	"license": "Apache-2.0",
+	"type": "package",
 	"authors": [
 		{
 			"name": "Josh Schmidt",
