--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		"PHP" : ">=5.3"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.8.24"
+		"phpunit/phpunit": "^8"
 	},
 	"scripts": {
 		"test": [
